/*
Copyright 2019-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package onos.test.benchmark;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

// SuiteRequest is a benchmark suite request
message SuiteRequest {
    // suite is the benchmark suite
    string suite = 1;

    // args is the benchmark arguments
    map<string, string> args = 2;
}

// SuiteResponse is a response to a SuiteRequest
message SuiteResponse {

}

// BenchmarkRequest is a benchmark request
message BenchmarkRequest {
    // suite is the benchmark suite
    string suite = 1;

    // benchmark is the benchmark to run
    string benchmark = 2;

    // args is the benchmark arguments
    map<string, string> args = 3;
}

// BenchmarkResponse is a benchmark response
message BenchmarkResponse {

}

// RunRequest is a benchmark run request
message RunRequest {
    // suite is the benchmark suite
    string suite = 1;

    // benchmark is the benchmark to run
    string benchmark = 2;

    // requests is the number of requests to run
    uint32 requests = 3;

    // duration is the duration for which to run the benchmark
    google.protobuf.Duration duration = 4[(gogoproto.stdduration) = true];

    // parallelism is the benchmark parallelism
    uint32 parallelism = 5;

    // args is the benchmark arguments
    map<string, string> args = 6;

    // maximum allowed latency before the benchmark will fail
    google.protobuf.Duration maxLatency = 7 [(gogoproto.stdduration) = true];
}

// RunResponse is a benchmark run response
message RunResponse {
    // suite is the benchmark suite
    string suite = 1;

    // benchmark is the benchmark that was run
    string benchmark = 2;

    // requests is the number of requests that were run
    uint32 requests = 3;

    // duration is the duration of the test run
    google.protobuf.Duration duration = 4 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];

    // latency is the mean latency
    google.protobuf.Duration latency = 5 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];

    // latency* are latency percentiles
    google.protobuf.Duration latency50 = 6 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
    google.protobuf.Duration latency75 = 7 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
    google.protobuf.Duration latency95 = 8 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
    google.protobuf.Duration latency99 = 9 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
}

// WorkerService is a benchmark worker service
service WorkerService {
    rpc SetupSuite (SuiteRequest) returns (SuiteResponse);
    rpc TearDownSuite (SuiteRequest) returns (SuiteResponse);
    rpc SetupWorker (SuiteRequest) returns (SuiteResponse);
    rpc TearDownWorker (SuiteRequest) returns (SuiteResponse);
    rpc SetupBenchmark (BenchmarkRequest) returns (BenchmarkResponse);
    rpc TearDownBenchmark (BenchmarkRequest) returns (BenchmarkResponse);
    rpc RunBenchmark (RunRequest) returns (RunResponse);
}
