/*
Copyright 2019-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package onos.test.simulation;

// SimulationLifecycleRequest is a simulation request
message SimulationLifecycleRequest {
    // simulation is the simulation name
    string simulation = 1;

    // args is the simulation arguments
    map<string, string> args = 2;
}

// SimulationLifecycleResponse is a response to a SimulationRequest
message SimulationLifecycleResponse {

}

// SimulatorRequest is a request to run a simulation
message SimulatorRequest {
    // simulation is the simulation name
    string simulation = 1;

    // register is the register address
    string register = 2;
}

// SimulatorResponse is a response indicating a simulation output
message SimulatorResponse {
    // error is a simulation error
    string error = 1;
}

// SimulatorService is a simulation worker service
service SimulatorService {
    rpc SetupSimulation (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc TearDownSimulation (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc SetupSimulator (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc TearDownSimulator (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc StartSimulator (SimulatorRequest) returns (SimulatorResponse);
    rpc StopSimulator (SimulatorRequest) returns (SimulatorResponse);
}
